# rover-v2

./: .gitignore  README.md
colcon_ws/src/articubot_one_ui/articubot_one_ui/: play_face.py  play_face_cars.py  ui_node.py
colcon_ws/src/diffdrive_roboclaw/: CMakeLists.txt  README.md  diffdrive_roboclaw.xml  package.xml
colcon_ws/src/diffdrive_roboclaw/bringup/config/: diffbot_controllers.yaml
colcon_ws/src/diffdrive_roboclaw/bringup/launch/: diffbot.launch.py
colcon_ws/src/diffdrive_roboclaw/description/launch/: view_robot.launch.py
colcon_ws/src/diffdrive_roboclaw/description/ros2_control/: diffbot.ros2_control.xacro
colcon_ws/src/diffdrive_roboclaw/description/urdf/: diffbot.urdf.xacro
colcon_ws/src/diffdrive_roboclaw/doc/: userdoc.rst
colcon_ws/src/diffdrive_roboclaw/hardware/: diffbot_system.cpp
colcon_ws/src/diffdrive_roboclaw/hardware/include/diffdrive_roboclaw/: diffbot_system.hpp  roboclaw_comms.hpp  visibility_control.h
colcon_ws/src/example_2/: CMakeLists.txt  package.xml
colcon_ws/src/example_2/hardware/: diffbot_system.cpp
colcon_ws/src/range_sensor_broadcaster/: package.xml
colcon_ws/src/roboclaw_driver/: package.xml  setup.py
colcon_ws/src/roboclaw_serial_driver/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/roboclaw_serial_driver/src/: roboclaw-test.c  (+1 more)
colcon_ws/src/rover/: CMakeLists.txt  package.xml
colcon_ws/src/rover/config/: joystick.yaml  my_controllers.yaml  view_bot.rviz  view_bot_with_lidar.rviz
colcon_ws/src/rover/description/: gazebo_control.urdf.xacro  lidar.urdf.xacro  robot.urdf.xacro  robot_core.urdf.xacro  ros2_control.urdf.xacro
colcon_ws/src/rover/documentation/roboclaw/Roboclaw Configurations/: Left Side (129).cfg
colcon_ws/src/rover/documentation/roboclaw/roboclaw_python/: xbox.py  xboxcontrol.py
colcon_ws/src/rover/launch/: joystick.launch.py  launch_rover_bot.launch.py  launch_rover_bot_joystick.launch.py  launch_sim.launch.py  lidar.launch.py  rsp.launch.py
colcon_ws/src/rover/worlds/: obstacles.world
colcon_ws/src/rover_platform_broadcaster/: CMakeLists.txt  README.md  rover_platform_broadcaster.xml
docker/: Dockerfile
documentation/roboclaw/: Docker_from_scratch.md  Useful_Commands.md
documentation/roboclaw/Roboclaw Configurations/: RIght Side (128).cfg
documentation/roboclaw/roboclaw_python/: roboclaw_simpledpwm.py  testing_comms_duty_cycle.py  testing_comms_speed.py  xbox360.py
launch/: lidar.launch.py
misc/roboclaw_python/: roboclaw_bareminimum.py  testing_comms_speed.py
scripts/: docker-build-no-cache.sh  docker-build.sh  docker-exec.sh  docker-run.sh  launch-browser.sh  start-rover.sh
webui/: index.html  package-lock.json
webui/css/: eyes.css
webui/js/: draw-functions.js  eyes.js  main.js
webui/js/lib/: roslib.js
(+17 files in other folders)
